syntax = "proto3";

package user;

option go_package = "github.com/KinMod-ui/thelaLocator/protobuf";

service UserService {
  rpc GetUser(GetUserRequest) returns (User);
  rpc CreateUser(CreateUserRequest) returns (User);
}
message GetUserRequest { string id = 1; }
message CreateUserRequest {
  string id = 1;
  float lat = 2;
  float long = 3;
}
message User {
  string id = 1;
  float lat = 2;
  float long = 3;
}
